# ccabral

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: ci.yml
example/: ll1_example.c  ll2_example.c  main.c
include/ccabral/: _auxds.h  _frstfllw.h  _grmmdata.h  _prdcdata.h  _prdcprsntble.h  _prdsmap.h  _prsrstck.h  _types.h  auxds.h  constants.h  parser.h  prdcdata.h  prdsmap.h  prdsset.h  tknsq.h  types.h
src/: _first.c  _follow.c  _frstfllw.c  _grmrdata.c  _prdcdata.c  _prdcprsntabl.c  _prdcprsntble.c  _prdsmap.c  _prsrstck.c  parser.c  prdcdata.c  prdsmap.c  tknsq.c
tests/: test_auxds.c  test_parser.c  test_prsrstck.c  test_runner.c  test_tknsq.c
